--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -36,10 +36,7 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
-            ],
+            "styles": ["src/styles.css"],
             "scripts": []
           },
           "configurations": {
