--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@ng-icons/core": "^31.3.0",
+    "@ng-icons/heroicons": "^31.3.0",
     "@tailwindcss/postcss": "^4.1.6",
     "date-fns": "^4.1.0",
     "postcss": "^8.5.3",
